--- a/css/main.css
+++ b/css/main.css
@@ -81,7 +81,7 @@
     color: white; /* white text color */
   }
   
-  /* Increase the font size of the <h1> element */
+  /* Increase the font size of the <h1> element
   .header_main h1 {
     font-size: 40px;
-  }
+  } */
