--- a/css/main.css
+++ b/css/main.css
@@ -85,4 +85,12 @@
     }
   }
 
+  /* -------------------------- footer --------------------------- */
+
+  .footer {
+    padding: 20px; /* Some padding */
+    text-align: center; /* Center text*/
+    background: #ddd; /* Grey background */
+  }
+
 
