--- a/css/main.css
+++ b/css/main.css
@@ -93,11 +93,9 @@ tr:nth-child(even) {
 /* -------------------------- footer --------------------------- */
 
 .footer {
-  overflow: hidden;
-  background-color: #e9e9e9;
   padding: 20px; /* Some padding */
   text-align: center; /* Center text*/
-  /*background: #ddd;  Grey background */
+  background: #ddd; /* Grey background */
 }
 
 
