--- a/css/main.css
+++ b/css/main.css
@@ -104,6 +104,14 @@ tr:nth-child(even) {
   width: 100%;
 }
 
+.mainnav_input[type=submit] {
+  padding: 30px;
+  background: #e9e9e9;
+  border: none;
+  font-size: 30px;
+  width: 100%;
+}
+
 .mainnav input[type=submit]:hover {
   padding: 30px;
   background: #ccc;
