--- a/css/main.css
+++ b/css/main.css
@@ -75,6 +75,15 @@ tr:nth-child(even) {
   font-size: 17px;
 }
 
+.topnav input[type=submit] {
+  float: right;
+  padding: 6px;
+  border: none;
+  margin-top: 8px;
+  margin-right: 16px;
+  font-size: 17px;
+}
+
 /* When the screen is less than 600px wide, stack the links and the search field vertically instead of horizontally */
 @media screen and (max-width: 600px) {
   .topnav a, .topnav input[type=text] {
