--- a/css/main.css
+++ b/css/main.css
@@ -77,11 +77,14 @@ tr:nth-child(even) {
 
 .topnav input[type=submit] {
   float: right;
-  padding: 6px;
+  padding: 14px 16px;
   border: none;
   margin-top: 8px;
   margin-right: 16px;
-  font-size: 17px;
+  background: #e9e9e9;
+  border: none;
+  font-size: 30px;
+  width: 100%;
 }
 
 /* When the screen is less than 600px wide, stack the links and the search field vertically instead of horizontally */
