--- a/css/main.css
+++ b/css/main.css
@@ -81,7 +81,7 @@ body {
 
 .topnav .search-container button {
   float: right;
-  padding: 6px 10px;
+  padding: 6px;
   margin-top: 8px;
   margin-right: 16px;
   background: #ddd;
