--- a/css/main.css
+++ b/css/main.css
@@ -114,7 +114,7 @@ body {
 /* -------------------------- logowanie ------------------------ */
 
 .container {
-  /*padding: 16px;*/
+  padding: 16px;
   width: 50%;
 }
 
