--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,7 @@ table {
   font-family: arial, sans-serif;
   border-collapse: collapse;
   width: 100%;
-  padding: 15px;
+  padding: 0px 15px;
 }
 
 td, th {
