--- a/css/main.css
+++ b/css/main.css
@@ -21,16 +21,14 @@ tr:nth-child(even) {
   background-color: #e9e9e9;
 }
 
-input[type=submit] {
-  border: none;
-  /*float: right;*/
-  padding: 6px;
-  margin-top: 8px;
-  margin-right: 16px;
-  background: #ddd;
-  font-size: 17px;
+table td input[type=submit] {
   border: none;
   cursor: pointer;
+  width: 100%;
+  background: #ccc;
+  font-size: 17px;
+  padding: 6px;
+  /*float: center;*/
 }
 
 input[type=submit]:hover {
