--- a/css/main.css
+++ b/css/main.css
@@ -59,6 +59,21 @@ input[type=submit]:hover {
   font-size: 40px;
 }
 
+/* ---------------------- header2 ------------------------------- */
+
+.header2 {
+  padding: 80px; /* some padding */
+  text-align: center; /* center the text */
+  background: #1abc9c; /* green background */
+  color: white; /* white text color */
+  width: 40%;
+}
+
+/* Increase the font size of the <h1> element */
+.header2 h1 {
+  font-size: 40px;
+}
+
 /* -------------------- search bar --------------------- */
 
 * {box-sizing: border-box;}
