--- a/css/main.css
+++ b/css/main.css
@@ -190,7 +190,6 @@ body {
 
 .dropdown {
   float: right;
-  width: 15%;
   overflow: hidden;
 }
 
@@ -219,7 +218,7 @@ body {
   padding: 12px 16px;
   text-decoration: none;
   display: block;
-  text-align: left;
+  text-align: right;
 }
 
 .dropdown-content a:hover {
