--- a/css/main.css
+++ b/css/main.css
@@ -218,7 +218,7 @@ body {
   padding: 12px 16px;
   text-decoration: none;
   display: block;
-  text-align: right;
+  text-align: left;
 }
 
 .dropdown-content a:hover {
