--- a/css/main.css
+++ b/css/main.css
@@ -205,7 +205,7 @@ body {
 
 .dropdown-content {
   display: none;
-  position: absolute;
+  float: right;
   background-color: #f9f9f9;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
