--- a/css/main.css
+++ b/css/main.css
@@ -205,6 +205,7 @@ body {
 
 .dropdown-content {
   display: none;
+  position: absolute;
   float: right;
   background-color: #f9f9f9;
   min-width: 160px;
