--- a/css/main.css
+++ b/css/main.css
@@ -203,6 +203,20 @@ body {
   margin: 0;
 }
 
+.dropdown2 {
+  overflow: hidden;
+}
+
+.dropdown2 .dropbtn {
+  font-size: 16px;
+  border: none;
+  outline: none;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
+}
+
 .dropdown-content {
   display: none;
   position: absolute;
